--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
@@ -15,15 +5,15 @@ framework = arduino
 
 lib_ldf_mode=deep
 
-lib_deps = https://github.com/me-no-dev/ESPAsyncWebServer.git@ 1.2.3+sha.f71e3d4
-   bblanchon/ArduinoJson@ 7.0.1
-   milesburton/DallasTemperature@ 3.11.0
-   davetcc/IoAbstraction@ 4.0.2
-   davetcc/LiquidCrystalIO@ 1.4.3
-   davetcc/TaskManagerIO@ 1.4.1
-   bogde/HX711@^0.7.5
-   
+lib_deps =https://github.com/ESP32Async/ESPAsyncWebServer.git@ 3.7.7
+	paulstoffregen/OneWire@^2.3.7
+	tcmenu/TaskManagerIO@^1.5.1
+	tcmenu/LiquidCrystalIO@^1.4.3
+	tcmenu/IoAbstraction@^4.4.0
+	bogde/hx711@^0.7.5
+	bblanchon/ArduinoJson@^7.4.1
+	milesburton/DallasTemperature@^4.0.4
 upload_speed = 921600
-upload_port = COM3
-monitor_port = COM3
+upload_port = //dev/ttyUSB0
+monitor_port = //dev/ttyUSB0
 monitor_speed = 115200
